Fix misaligned shopping cart in CME header
The course-header element was too wide, forcing the shopping cart down
if username was too long. We remove the width property for the course-header
to fix the issue.

--- a/lms/static/sass/course/layout/_courseware_header.scss
+++ b/lms/static/sass/course/layout/_courseware_header.scss
@@ -179,7 +179,6 @@ header.global.slim {
 
   h2 {
     display: block;
-    width: 65%;
     @include float(left);
     font-size: 0.9em;
     font-weight: 600;
